:hammer: melhoria no texto

--- a/00.intro.ipynb
+++ b/00.intro.ipynb
@@ -128,6 +128,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "a8bc28e0-f493-4f5d-8165-e85ff0bfbf4d",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "08a1757d-5e32-4ae1-a5ba-72910ab93d59",
    "metadata": {},
    "source": [
@@ -368,25 +376,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 8,
-   "id": "1850437e",
+   "cell_type": "markdown",
+   "id": "ab134ff1-92db-481a-b854-cc88f9dad80b",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Int64"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
-    "# para determinar o tipo de um objeto, podemos utilizar \"typeof\".\n",
-    "typeof(soma)  # Int64"
+    "---"
    ]
   },
   {
@@ -394,8 +388,8 @@
    "id": "29dbbd19-a520-43a9-939d-385db40f7a52",
    "metadata": {},
    "source": [
-    "#### boas práticas e desempenho\n",
-    "Embora seja perfeitamente possível mudar o valor de uma variável no decorrer da execução de um programa, é uma boa prática de programação, além de crítica para performance, manter as variáveis estáveis com relação ao tipo. Ou seja: se declaramos um variável ```a = 42```, é uma boa ideia não alterar essa variável para 0.42, por exemplo. Sabeo de antemão que precisaremos de um float, recomenda-se que a variável seja já declarada como float."
+    "### Boas práticas e desempenho\n",
+    "Embora seja perfeitamente possível mudar o valor de uma variável no decorrer da execução de um programa, é uma boa prática, além de importante para performance, manter as variáveis estáveis com relação ao tipo. Ou seja: se declaramos um variável ```a = 42```, é uma boa ideia não alterar essa variável para 0.42, por exemplo. Se soubermos de antemão que precisaremos de um float, o recomendado é que a variável seja já declarada como float."
    ]
   },
   {
