:rocket: estrutura de dados

--- a/00.intro.ipynb
+++ b/00.intro.ipynb
@@ -385,6 +385,397 @@
   },
   {
    "cell_type": "markdown",
+   "id": "1d3ec802-00ab-48b0-98b7-2ac091930d82",
+   "metadata": {},
+   "source": [
+    "### Estruturas de dados\n",
+    "\n",
+    "Abordaremos 3 tipos de estruturas:\n",
+    "- Tuplas (tuples) e tuplas nomeadas (named tuples)\n",
+    "- Dicionários (dictionaries)\n",
+    "- Matrizes (arrays)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6b2b2b9d-d16f-4673-942d-a3110eda193a",
+   "metadata": {},
+   "source": [
+    "#### Tuplas\n",
+    "tuplas são sequências ordenadas e imutáveis de elementos."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "id": "52a6b900-e85a-4941-bea1-0b93600ce16d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# tuplas são definidas com parênteses\n",
+    "animais = (\"gato\", \"cachorro\", \"papagaio\");"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "id": "049333fe-494b-487f-b2ac-44476830990e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\"gato\""
+      ]
+     },
+     "execution_count": 53,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "animais[1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "id": "5f889ff9-beb7-43d7-9908-ee22e971c627",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "LoadError",
+     "evalue": "MethodError: no method matching setindex!(::Tuple{String, String, String}, ::String, ::Int64)",
+     "output_type": "error",
+     "traceback": [
+      "MethodError: no method matching setindex!(::Tuple{String, String, String}, ::String, ::Int64)",
+      "",
+      "Stacktrace:",
+      " [1] top-level scope",
+      "   @ In[57]:2",
+      " [2] eval",
+      "   @ ./boot.jl:360 [inlined]",
+      " [3] include_string(mapexpr::typeof(REPL.softscope), mod::Module, code::String, filename::String)",
+      "   @ Base ./loading.jl:1094"
+     ]
+    }
+   ],
+   "source": [
+    "# já que são imutáveis, não é possível alterar o valor de um elemento\n",
+    "animais[1] = \"um erro irá acontecer!\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1d3be1b5-98ee-4b5d-a629-be7edf724a7d",
+   "metadata": {},
+   "source": [
+    "#### Tuplas nomeadas\n",
+    "Tuplas nomeadas são como tuplas, porém com nomes para os valores."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "id": "462973f1-dc89-4cea-adc8-aade7359cbf9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "animais2 = (ave = \"papagaio\", felino = \"gato\", canideo = \"cachorro\");"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "id": "fcec8e9e-660b-4db4-974c-94781e913914",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\"papagaio\""
+      ]
+     },
+     "execution_count": 60,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# enquanto objetos ordenados, ainda é possível obter os valores através de índice numérico\n",
+    "animais2[1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "id": "0bb38077-19d3-4368-abc8-ed80ebb1cc0e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\"gato\""
+      ]
+     },
+     "execution_count": 62,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# embora agora também seja possível obter um valor através do nome do elemento\n",
+    "animais2.felino"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0fdec697-9bf3-46e4-a0d5-df7fe0333dc9",
+   "metadata": {},
+   "source": [
+    "#### Dicionários\n",
+    "\n",
+    "Dicionários são como tuplas nomeadas no que diz respeito à chaves nomeando valores. Contudo, dicionários são não-ordenados e mutáveis."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "id": "b0216d69-6e7b-4a01-b06c-2a1883237f6d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# diferentemente das tuplas nomeadas, a síntaxe pede a keyword Dict e usa => na construção.\n",
+    "telefones = Dict(\"pessoa1\" => \"21 6666-00000\", \"pessoa2\" => \"11 8888-9999\");\n",
+    "# note que o nome das chaves são strings."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "id": "ba79d35a-54d6-4a26-b05a-fdf262856e26",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\"21 6666-00000\""
+      ]
+     },
+     "execution_count": 68,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# diferentemente das tuplas nomeadas, a síntaxe para acessar um valor é feita com colchetes.\n",
+    "telefones[\"pessoa1\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "id": "6d57be63-a5ca-4f44-8481-e0ca70332bee",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\"81 1212-0000\""
+      ]
+     },
+     "execution_count": 69,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# como são mutáveis, é possível adicionar novos elementos\n",
+    "telefones[\"pessoa3\"] = \"81 1212-0000\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "id": "e29ae17b-696c-4d55-8fb9-64a76708990e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\"81 1212-0000\""
+      ]
+     },
+     "execution_count": 71,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# ou mesmo remover elementos\n",
+    "pop!(telefones, \"pessoa3\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "46002e41-38bb-48d5-8d04-794f03a3eb0d",
+   "metadata": {},
+   "source": [
+    "#### Matrizes\n",
+    "\n",
+    "Matrizes, ao contrário de tuplas, são mutáveis. Diferentemente de dicionários, matrizes são ordenadas. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
+   "id": "176aaa30-bec6-4d58-9cb5-4ebc39987f52",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3-element Vector{String}:\n",
+       " \"pessoa1\"\n",
+       " \"pessoa2\"\n",
+       " \"pessoa3\""
+      ]
+     },
+     "execution_count": 86,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pessoas = [\"pessoa1\", \"pessoa2\", \"pessoa3\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 87,
+   "id": "5fc42878-0288-4baa-b832-121a3d995e81",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\"nova pessoa3\""
+      ]
+     },
+     "execution_count": 87,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# além de ser possível alterar elementos existentes na matriz\n",
+    "pessoas[3] = \"nova pessoa3\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 88,
+   "id": "c7c4e84d-a4ae-4d21-8c8c-7a2649ebdb3d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\"pessoa4\""
+      ]
+     },
+     "execution_count": 88,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# também é possível adicionar novos elementos no fim da matriz\n",
+    "push!(pessoas, \"pessoa4\");\n",
+    "\n",
+    "# ou ainda remover o último elemento\n",
+    "pop!(pessoas)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "32f36aa8-9f38-4399-bd3e-f0facba69500",
+   "metadata": {},
+   "source": [
+    "Matrizes podem armazenar mais de um tipo de objetos, incluindo outras matrizes."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 106,
+   "id": "9fdf8e7e-d831-4fe1-a63d-5d33183fc793",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2-element Vector{Vector{String}}:\n",
+       " [\"ovos\", \"leite\", \"carne\"]\n",
+       " [\"pão\", \"manteiga\", \"café\"]"
+      ]
+     },
+     "execution_count": 106,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "listaCompras = [\n",
+    "    [\"maçã\", \"banana\", \"pera\"],\n",
+    "    [\"ovos\", \"leite\", \"carne\"],\n",
+    "    [\"pão\", \"manteiga\", \"café\"]\n",
+    "]\n",
+    "\n",
+    "# para pegar um subelemento \n",
+    "listaCompras[1][1]\n",
+    "\n",
+    "# para pegar um recorte da matriz\n",
+    "listaCompras[[2, 3]]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 108,
+   "id": "fbf0e8e9-8856-4f4a-be12-d18da1c1525d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3-element Vector{Vector{String}}:\n",
+       " [\"cereal\", \"açúcar\", \"achocolatado\"]\n",
+       " [\"ovos\", \"leite\", \"carne\"]\n",
+       " [\"pão\", \"manteiga\", \"café\"]"
+      ]
+     },
+     "execution_count": 108,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Importante: tome cuidado ao copiar itens entre listas, pois a referência é sempre mantida.\n",
+    "novaListaCompras = listaCompras\n",
+    "novaListaCompras[1] = [\"cereal\", \"açúcar\", \"achocolatado\"]\n",
+    "listaCompras\n",
+    "# Note como alterar \"novaListaCompras\" alterou a lista inicial (listaCompras)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "580dd622-aab7-4718-a743-1f732032c23c",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "29dbbd19-a520-43a9-939d-385db40f7a52",
    "metadata": {},
    "source": [
@@ -415,16 +806,6 @@
     "\n",
     "# Embora não recomendado, é possível converter o tipo da variável:\n",
     "convert(Float64, 2)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "08767da3-699f-4bc1-91b5-6cf020005657",
-   "metadata": {},
-   "source": [
-    "### escopo das variáveis\n",
-    "\n",
-    "em contrução..."
    ]
   }
  ],
