:rocket: laços de repetição

--- a/01.controle-de-fluxo.ipynb
+++ b/01.controle-de-fluxo.ipynb
@@ -10,6 +10,220 @@
   },
   {
    "cell_type": "markdown",
+   "id": "2a0cbde3-46f1-423f-89fa-a1f3337b74ce",
+   "metadata": {},
+   "source": [
+    "### Repetição"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "52a08e27-d1a5-4d95-b89d-dc70ed0680f6",
+   "metadata": {},
+   "source": [
+    "#### Laços while"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "297d7927-ec36-427a-bacb-a19c1b93941e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "5\n",
+      "6\n",
+      "7\n",
+      "8\n",
+      "9\n",
+      "10\n"
+     ]
+    }
+   ],
+   "source": [
+    "n = 0\n",
+    "while n < 10\n",
+    "    n += 1\n",
+    "    println(n)\n",
+    "end"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "602ef5c0-9ead-481e-9314-52e215ef4dda",
+   "metadata": {},
+   "source": [
+    "#### Laços for"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "5343affc-1e0d-4169-958b-9c12cd38ae2c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "5\n",
+      "6\n",
+      "7\n",
+      "8\n",
+      "9\n",
+      "10\n"
+     ]
+    }
+   ],
+   "source": [
+    "for n in 1:10\n",
+    "    println(n)\n",
+    "end"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "61226153-ece3-4e06-88d2-dd9a290f3ecf",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Olá, Luiza! Tudo bem?\n",
+      "Olá, Vitória! Tudo bem?\n",
+      "Olá, Jonathan! Tudo bem?\n",
+      "Olá, Lis! Tudo bem?\n"
+     ]
+    }
+   ],
+   "source": [
+    "# é possível iterar sobre os elementos de uma matriz\n",
+    "meusAmigos = [\"Luiza\", \"Vitória\", \"Jonathan\", \"Lis\"]\n",
+    "\n",
+    "for amigo in meusAmigos\n",
+    "    println(\"Olá, $(amigo)! Tudo bem?\")\n",
+    "end"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "58de620e-a0ae-4d9d-877b-1f3040636717",
+   "metadata": {},
+   "source": [
+    "Para melhor ilustrar o uso de matrizes mais complexas, vamos usar os laços for para criar tabelas de adição, onde o valor de cada entrada é a soma dos seus índices de linha e coluna.\n",
+    "\n",
+    "Note que nós iremos iterar primeiro sobre as colunas (loop mais externo), visando otimizar a performance. Para mais informação sobre a indexação multidimensional em matrizes, veja a [documentação oficial](https://docs.julialang.org/en/v1/manual/performance-tips/#Access-arrays-in-memory-order,-along-columns-1)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "29a443de-8b49-4353-b761-bf92908e7afc",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5×5 Matrix{Int64}:\n",
+       " 2  3  4  5   6\n",
+       " 3  4  5  6   7\n",
+       " 4  5  6  7   8\n",
+       " 5  6  7  8   9\n",
+       " 6  7  8  9  10"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Vamos começar criar uma matriz de 5x5 repleta de zeros\n",
+    "m, n = 5, 5\n",
+    "A = fill(0, (m, n))\n",
+    "\n",
+    "for j in 1:n\n",
+    "    for i in 1:m\n",
+    "        A[i, j] = i + j\n",
+    "    end\n",
+    "end\n",
+    "A"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "4194003a-2f3a-49d3-9a62-beb3dbeaefbc",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5×5 Matrix{Int64}:\n",
+       " 2  3  4  5   6\n",
+       " 3  4  5  6   7\n",
+       " 4  5  6  7   8\n",
+       " 5  6  7  8   9\n",
+       " 6  7  8  9  10"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Julia oferece açúcar sintático para laços aninhados\n",
+    "B = fill(0, (m, n))\n",
+    "for j in 1:n, i in 1:m\n",
+    "    B[i, j] = i + j\n",
+    "end\n",
+    "B"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "129b63aa-903f-4f66-b23d-7167344216b1",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5×5 Matrix{Int64}:\n",
+       " 2  3  4  5   6\n",
+       " 3  4  5  6   7\n",
+       " 4  5  6  7   8\n",
+       " 5  6  7  8   9\n",
+       " 6  7  8  9  10"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# A forma mais \"Juliana\", contudo, é usar \"array comprehension\"\n",
+    "C = [i + j for i in 1:m, j in 1:n]\n",
+    "C"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "65f2814e-2455-444b-a502-c59084eb507f",
    "metadata": {},
    "source": [
