:rocket: mais condicionais

--- a/01.controle-de-fluxo.ipynb
+++ b/01.controle-de-fluxo.ipynb
@@ -234,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 29,
    "id": "1ca73b6a-47ac-4efa-b271-e5325feac093",
    "metadata": {},
    "outputs": [],
@@ -244,7 +244,7 @@
     "z = begin\n",
     "    x = 1\n",
     "    y = 2\n",
-    "    x + y\n",
+    "    x + y # irá retornar 3\n",
     "end\n",
     "\n",
     "z = (x = 1; y = 2; x + y)\n",
@@ -253,7 +253,7 @@
     "\n",
     "z = (x = 1; \n",
     "     y = 2;\n",
-    "     x + y);"
+    "     x + y);  "
    ]
   },
   {
@@ -288,7 +288,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "function teste(x,y)\n",
+    "function teste(x, y)\n",
     "    if x < y\n",
     "        rel = \"menor que\"\n",
     "    elseif x == y\n",
@@ -387,6 +387,228 @@
     "if 1\n",
     "    println(\"true\")\n",
     "end"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e824e004-0aa4-4aad-9a95-d48339b7aa76",
+   "metadata": {},
+   "source": [
+    "#### Operador ternário\n",
+    "\n",
+    "estrutura: expressão ? saída caso a expressão seja verdadeira : saída caso seja falsa"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "5e84482e-dadc-4c3a-9044-2875bbd6f160",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "a não é maior que b\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = 1\n",
+    "b = 2\n",
+    "\n",
+    "a > b ? println(\"a é maior que b\") : println(\"a não é maior que b\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6d65bd2b-493b-4dbf-bbf1-03315e7c1654",
+   "metadata": {},
+   "source": [
+    "#### Circuito curto (and)\n",
+    "\n",
+    "A primeira parte da expressão é avaliada. Se ela for falsa, Julia nem mesmo avalia a segunda, pois a saída geral da expressão já será falsa de toda forma. Nota: leia o operador ```&``` como ```and```."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "id": "f1b9c005-d565-4126-837e-c628236b6f26",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "false"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a = false\n",
+    "b = true\n",
+    "\n",
+    "a && b"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "caba0316-46e1-4065-aed0-0d73af26bee2",
+   "metadata": {},
+   "source": [
+    "Em outro caso, se ```a``` for verdadeiro, Julia irá retornar o valor de ```b``` como resultante geral da expressão. Isso significa que ```b``` nem mesmo precisa ser avaliado verdadeiro (true) ou falso (false). "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "id": "cd1902d5-bd1c-433c-b8e4-49cbf0f3ce92",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "resposta da expressão!\n"
+     ]
+    }
+   ],
+   "source": [
+    "b && println(\"resposta da expressão!\")  # a saída será \"resposta da expressão!\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "id": "5294d275-d7f2-4386-b258-0e030551e01f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "false"
+      ]
+     },
+     "execution_count": 60,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# note que, como a será avaliado falso, o retorno será false\n",
+    "a && println(\"resposta da expressão!\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "id": "bd3c1bdb-9347-468b-bef7-6d84ac45e162",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "LoadError",
+     "evalue": "x não pode ser maior que zero!",
+     "output_type": "error",
+     "traceback": [
+      "x não pode ser maior que zero!",
+      "",
+      "Stacktrace:",
+      " [1] error(s::String)",
+      "   @ Base ./error.jl:33",
+      " [2] top-level scope",
+      "   @ In[57]:3",
+      " [3] eval",
+      "   @ ./boot.jl:360 [inlined]",
+      " [4] include_string(mapexpr::typeof(REPL.softscope), mod::Module, code::String, filename::String)",
+      "   @ Base ./loading.jl:1094"
+     ]
+    }
+   ],
+   "source": [
+    "# no exemplo abaixo, o erro será retornado \n",
+    "x = 1\n",
+    "x > 0 && error(\"x não pode ser maior que zero!\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "id": "cb12e85c-2888-492b-a2fb-79f6ae98fa23",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "olá!\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "true"
+      ]
+     },
+     "execution_count": 55,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# é possível adicionar mais complexidade à segunda parte do circuito\n",
+    "b && (println(\"olá!\"); true)  # o retorno será \"olá\" e, em seguida, \"true\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8e842d47-7516-41aa-b933-8b5eec22cc1d",
+   "metadata": {},
+   "source": [
+    "#### Circuito curto (or)\n",
+    "\n",
+    "Utilizar o circuito curto com operador lógico ```or``` retornará o valor da primeira expressão caso ela seja verdadeira; caso não seja, a segunda expressão será retornada."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "id": "2b1ef554-af8d-4b67-905b-3830bd6f5474",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "true"
+      ]
+     },
+     "execution_count": 61,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "true || println(\"olá!\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "id": "ab1f1e12-d0de-4ee8-903a-27ad1c30777e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "olá!\n"
+     ]
+    }
+   ],
+   "source": [
+    "false || println(\"olá!\")"
    ]
   }
  ],
