--- a/00.intro.ipynb
+++ b/00.intro.ipynb
@@ -2,6 +2,25 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "effde20a-2d99-44ff-a68d-cec58b69d2c7",
+   "metadata": {},
+   "source": [
+    "Índice\n",
+    "1. Introdução\n",
+    "2. Comentários em Julia\n",
+    "3. Operações aritméticas básicas\n",
+    "4. Variáveis\n",
+    "    - Regras e convenções de nomenclatura\n",
+    "    - Strings\n",
+    "        - Interpolação e concatenação de strings\n",
+    "    - Estruturas de dados nativas\n",
+    "       - Tuplas (tuples) e tuplas nomeadas (named tuples)\n",
+    "       - Dicionários (dictionaries)\n",
+    "       - Matrizes (arrays)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "608af6fb-fc23-403d-9866-1c5dea218642",
    "metadata": {},
    "source": [
@@ -779,7 +798,7 @@
    "id": "29dbbd19-a520-43a9-939d-385db40f7a52",
    "metadata": {},
    "source": [
-    "### Boas práticas e desempenho\n",
+    "### Um pouco de boas práticas para desempenho\n",
     "Embora seja perfeitamente possível mudar o valor de uma variável no decorrer da execução de um programa, é uma boa prática, além de importante para performance, manter as variáveis estáveis com relação ao tipo. Ou seja: se declaramos um variável ```a = 42```, é uma boa ideia não alterar essa variável para 0.42, por exemplo. Se soubermos de antemão que precisaremos de um float, o recomendado é que a variável seja já declarada como float."
    ]
   },
