--- a/01.controle-de-fluxo.ipynb
+++ b/01.controle-de-fluxo.ipynb
@@ -2,6 +2,23 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "c26cb254-4722-4315-b64b-0dac58b87d78",
+   "metadata": {},
+   "source": [
+    "Índice\n",
+    "\n",
+    "1. Repetição\n",
+    "    - Laços while\n",
+    "    - Laços for\n",
+    "2. Expressões compostas\n",
+    "3. Avaliação condicional\n",
+    "    - if, elseif e else\n",
+    "    - operador ternário\n",
+    "    - operadores lógicos e circuito curto"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "27ae497b-4e19-41fb-82af-f6e27f042826",
    "metadata": {},
    "source": [
@@ -425,7 +442,7 @@
    "id": "6d65bd2b-493b-4dbf-bbf1-03315e7c1654",
    "metadata": {},
    "source": [
-    "#### Circuito curto (and)\n",
+    "#### Operadores lógicos e circuito curto (and)\n",
     "\n",
     "A primeira parte da expressão é avaliada. Se ela for falsa, Julia nem mesmo avalia a segunda, pois a saída geral da expressão já será falsa de toda forma. Nota: leia o operador ```&``` como ```and```."
    ]
@@ -567,7 +584,7 @@
    "id": "8e842d47-7516-41aa-b933-8b5eec22cc1d",
    "metadata": {},
    "source": [
-    "#### Circuito curto (or)\n",
+    "#### Operadores lógicos e circuito curto (or)\n",
     "\n",
     "Utilizar o circuito curto com operador lógico ```or``` retornará o valor da primeira expressão caso ela seja verdadeira; caso não seja, a segunda expressão será retornada."
    ]
